tempfile/derive_more/tests/compile_fail/debug/legacy_bound_syntax.rs
#[derive(derive_more::Debug)]
#[debug(bound = "String: std::fmt::Display")]
pub struct Foo {
    bar: String,
}

fn main() {}
